--- a/community.html
+++ b/community.html
@@ -10,6 +10,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="_css/site.css" rel="stylesheet" />
     <link href="_css/jquery-ui.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
     <style>
       .ui-menu {
