--- a/education.html
+++ b/education.html
@@ -10,7 +10,7 @@
     <title>Seeds Of Solidarity</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 
-    <script src="_js/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script>
       $(document).ready(function() {
         var newPhoto = new Image();
