--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <title>Seeds Of Solidarity</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   </head>
 
   <body>
