--- a/about.html
+++ b/about.html
@@ -39,6 +39,7 @@
     <script src="_js/jquery.min.js"></script>
     <script src="_js/jquery-ui.min.js"></script>
     <script src="jquery_validate/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
     <script>
       $(document).ready(function() {
