--- a/education.html
+++ b/education.html
@@ -58,7 +58,7 @@
     <div class="content">
       <img
         style="display: block; margin-left: auto; margin-right: auto;"
-        src="images/seeds4cr.JPEG"
+        src="images/Seeds3.jpg"
         width="100%"
         height="150"
       />
