--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="_css/site.css" rel="stylesheet" />
     <link href="_css/jquery-ui.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
     <style>
       .ui-menu {
@@ -35,9 +36,7 @@
       }
     </style>
 
-    <script src="_js/jquery.min.js"></script>
-    <script src="_js/jquery-ui.min.js"></script>
-    <script src="jquery_validate/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
     <script>
       $(document).ready(function() {
