--- a/media.html
+++ b/media.html
@@ -10,7 +10,7 @@
     <title>Seeds Of Solidarity</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 
-    <script src="_js/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script>
       $(document).ready(function() {
         var newPhoto = new Image();
@@ -57,7 +57,7 @@
     <div class="content">
       <img
         style="display: block; margin-left: auto; margin-right: auto;"
-        src="images/seeds13.jpeg"
+        src="images/Seeds3.jpg"
         width="100%"
         height="150"
       />
