--- a/community.html
+++ b/community.html
@@ -65,14 +65,8 @@
         width="100%"
         height="150"
       /><br />
-      <ul id="menu">
-        <li>
-          <a href="#">Community</a>
-          <ul>
-            <li><a href="about.html">About Us</a></li>
-          </ul>
-        </li>
-      </ul>
+      <h6>Community</h6>
+      <br />
       <br />
       <p>
         Seeds of Solidarity is based in the nine-town North Quabbin region of
