--- a/about.html
+++ b/about.html
@@ -135,14 +135,8 @@
         width="100%"
         height="150"
       /><br />
-      <ul id="menu">
-        <li>
-          <a href="#">About Us</a>
-          <ul>
-            <li><a href="community.html">Community</a></li>
-          </ul>
-        </li>
-      </ul>
+      <h1>ABOUT US</h1>
+
       <br />
       <p>
         Seeds of Solidarity consists of two entities that are fiscally distinct,
@@ -187,42 +181,6 @@
     </div>
     <br /><br />
 
-    <h6 align="center">Contact Us</h6>
-    <br />
-
-    <div class="content">
-      <form action="about.html" method="post" name="signup" id="signup">
-        <div class="content">
-          <label for="name" class="label">Name</label>
-          <input
-            name="name"
-            type="text"
-            class="required"
-            id="name"
-            title="Please type your name."
-          />
-        </div>
-
-        <div class="content">
-          <label for="email" class="label">Email</label>
-          <input name="email" type="text" id="email" />
-        </div>
-
-        <div class="content">
-          <label for="comments" class="label">Message</label>
-          <textarea
-            name="comments"
-            cols="25"
-            rows="2.5"
-            id="comments"
-          ></textarea>
-        </div>
-
-        <div class="content">
-          <input type="submit" name="submit" id="submit" value="Submit" />
-        </div>
-      </form>
-    </div>
     <br /><br />
   </body>
 </html>
