--- a/media.html
+++ b/media.html
@@ -57,7 +57,7 @@
     <div class="content">
       <img
         style="display: block; margin-left: auto; margin-right: auto;"
-        src="images/Seeds3.jpg"
+        src="images/seeds10.jpg"
         width="100%"
         height="150"
       />
