--- a/community.html
+++ b/community.html
@@ -65,7 +65,7 @@
         width="100%"
         height="150"
       /><br />
-      <h1>Community</h1>
+      <h1>COMMUNITY</h1>
       <br />
       <br />
       <p>
